package palaceProtos;

option java_package = "com.kegelapps.palace.protos";
option java_outer_classname = "DeckProtos";
import "Card.proto";

message DeckView {
    repeated CardView cards = 1;
    optional float x = 2;
    optional float y = 3;
}