package palaceProtos;

option java_package = "com.kegelapps.palace.protos";
option java_outer_classname = "TableProtos";
import "Card.proto";
import "Deck.proto";
import "Hand.proto";
import "InPlay.proto";

message TableView {
    required InPlayView inPlay = 1;
    required DeckView deck = 2;
    repeated HandView hands = 3;
    optional float x = 4;
    optional float y = 5;
}